NLA-Strip Corrupted after reopening file with library override #102662

Closed
opened 2022-11-21 17:18:11 +01:00 by Detlef Jankowiak-Evers · 6 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40

Blender Version
Broken: version: blender-3.5.0-alpha 7a6cdeb242
Worked: Never

Short description of error
NLA-Strip Corrupted aufter opening file again in case of library override

Exact steps for others to reproduce the error
1.blend
#102662.blend

  • Download files
  • Open file #102662.blend (contains overridden object and armature with 2 actions)
  • In NLA editor, move both strips by 116 frames
  • Save file
  • Reopen file

First strip wil have incorrect length and start frame. This does not happen if both strips are in different NLA tracks.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40 **Blender Version** Broken: version: blender-3.5.0-alpha 7a6cdeb242 Worked: Never **Short description of error** NLA-Strip Corrupted aufter opening file again in case of library override **Exact steps for others to reproduce the error** [1.blend](https://archive.blender.org/developer/F13957130/1.blend) [#102662.blend](https://archive.blender.org/developer/F13957128/T102662.blend) - Download files - Open file #102662.blend (contains overridden object and armature with 2 actions) - In NLA editor, move both strips by 116 frames - Save file - Reopen file First strip wil have incorrect length and start frame. This does not happen if both strips are in different NLA tracks.

Added subscriber: @DeJev

Added subscriber: @DeJev

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @cmbasnett

Added subscriber: @cmbasnett
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:34:44 +01:00
Collaborator

If I drag translate them, it resets, if I move the clips with the frame start attribute by typing the value in and hitting enter it is fine, if I just drag it or I use the G key and save/reopen then it does the strip end change.

If I drag translate them, it resets, if I move the clips with the frame start attribute by typing the value in and hitting enter it is fine, if I just drag it or I use the G key and save/reopen then it does the strip end change.
Collaborator

If you by hand set the short strip back to the right length, when you save and open the file the second strip is now moved over and the first strip is longer by the amount it was shortened, so it saves wrong and changes twice.

And it seems to only do it on the bottom track that has strips
image

here it is opened after setting the strip to the right length
image

Something isn't getting sett correctly in the override.

If you by hand set the short strip back to the right length, when you save and open the file the second strip is now moved over and the first strip is longer by the amount it was shortened, so it saves wrong and changes twice. And it seems to only do it on the bottom track that has strips ![image](/attachments/c597de86-4a67-45f6-bd3b-7adcdf5f0397) here it is opened after setting the strip to the right length ![image](/attachments/29d0d5eb-d351-4a9f-a478-b8a87cfc7fbb) Something isn't getting sett correctly in the override.
Sybren A. Stüvel added this to the Animation & Rigging project 2023-05-11 17:37:51 +02:00
Sybren A. Stüvel added
Priority
High
and removed
Priority
Normal
labels 2023-05-11 17:38:20 +02:00
Sybren A. Stüvel changed title from NLA-Strip Corrupted aufter opening file again in case of library override to NLA-Strip Corrupted after reopening file with library override 2023-05-15 12:23:36 +02:00
Sybren A. Stüvel self-assigned this 2023-05-15 12:56:36 +02:00

I found out where the corruption came from. The override system uses RNA to update properties one-by-one, and the RNA code trying its best to keep things consistent / valid. This is very much desired behaviour while a human is editing the data.

Instead of setting both start and end of all strips, and then doing a 'sanitize this' call, it's done per property. That means that the strip is moved into another strip, which is not allowed.

Once all the overrides have been applied the situation is valid again, but while setting each property, temporarily things get invalid.

I'm working on a solution.

I found out where the corruption came from. The override system uses RNA to update properties one-by-one, and the RNA code trying its best to keep things consistent / valid. This is very much desired behaviour while a human is editing the data. Instead of setting both start and end of all strips, and then doing a 'sanitize this' call, it's done per property. That means that the strip is moved into another strip, which is not allowed. Once all the overrides have been applied the situation is valid again, but while setting each property, temporarily things get invalid. I'm working on a solution.
Sybren A. Stüvel added this to the 3.6 LTS milestone 2023-05-19 11:29:52 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-22 11:18:48 +02:00
Sybren A. Stüvel removed this from the Animation & Rigging project 2023-06-08 10:25:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102662
There is no content yet.